# gpu-playground

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt  mat_add.cpp  mat_sub.cpp  mat_vec_mul.cpp  vec_add.cpp  vec_sub.cpp
benchmarks/algorithms/: benchmark_cg.cpp  benchmark_gd.cpp
benchmarks/matrix/: benchmark_add.cpp  benchmark_cdiv.cpp  benchmark_cmul.cpp  benchmark_mul.cpp  benchmark_sadd.cpp  benchmark_sdiv.cpp  benchmark_smul.cpp  benchmark_ssub.cpp  benchmark_sub.cpp  benchmark_trans.cpp
benchmarks/matrix_vector/: benchmark_mul.cpp
benchmarks/vector/: benchmark_add.cpp  benchmark_cdiv.cpp  benchmark_cmul.cpp  benchmark_mul.cpp  benchmark_sadd.cpp  benchmark_sdiv.cpp  benchmark_smul.cpp  benchmark_ssub.cpp  benchmark_sub.cpp  benchmark_trans.cpp
cmake/: eigen3.cmake
cmake/backends/: CPU.cmake  CUDA.cmake  MPS.cmake  Metal.cmake  backend.cmake  serial.cmake
include/: algorithms.hpp  buffer.hpp  device.hpp  device_types.hpp  shape.hpp  tensor.hpp
metal/: metal.cpp  metal.hpp
shaders/: mat_vec_mul.metal
src/backends/cpu/: cpu_device.cpp  cpu_device.hpp
src/backends/cuda/: cuda_device.cu  cuda_device.hpp
src/backends/cuda/kernels/: mat_add.cu  mat_cdiv.cu  mat_cmul.cu  mat_mul.cu  mat_sadd.cu  mat_sdiv.cu  mat_smul.cu  mat_ssub.cu  mat_sub.cu  mat_trans.cu  vec_add.cu
src/backends/eigen/: eigen_device.cpp  eigen_device.hpp
src/backends/metal/: metal_device.hpp  metal_device.mm
src/backends/metal/shaders/: mat_add.metal  mat_mul.metal  mat_smul.metal  mat_sub.metal  mat_trans.metal
src/backends/mps/: mps_device.hpp  mps_device.mm
src/backends/serial/: serial_device.cpp  serial_device.hpp
src/backends/simd/: simd_device.cpp  simd_device.hpp
tests/: device_creation.cpp  mat_sub.cpp  mat_vec_mul.cpp  vec_add.cpp  vec_mul.cpp  vec_sub.cpp
tests/algorithms/: test_cg.cpp  test_gd.cpp
tests/matrix/: test_add.cpp  test_cdiv.cpp  test_cmul.cpp  test_mul.cpp  test_sadd.cpp  test_sdiv.cpp  test_smul.cpp  test_ssub.cpp  test_sub.cpp  test_trans.cpp
tests/matrix_vector/: test_mul.cpp
tests/vector/: test_add.cpp  test_cdiv.cpp  test_cmul.cpp  test_mul.cpp  test_sadd.cpp  test_sdiv.cpp  test_smul.cpp  test_ssub.cpp  test_sub.cpp  test_trans.cpp
